<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1565C0"
    android:padding="@dimen/text_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ETTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/info_name_task"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/ETDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/info_description"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/ETFullDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/info_full_description"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:layout_marginTop="8dp"
            android:minLines="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_tasks"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/layout_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/BtnAddTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button"
            android:layout_marginTop="8dp"
            android:backgroundTint="#3849AB"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/BtnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:layout_marginTop="16dp"
            android:backgroundTint="#3849AB"
            android:textColor="@color/white"/>

    </LinearLayout>
</ScrollView>