<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewTaskFragment"
    android:padding="@dimen/text_margin"
    android:background="#1565C0">

    <TextView
        android:id="@+id/TVName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textAppearance="?attr/textAppearanceListItem" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/info_description_task" />

    <TextView
        android:id="@+id/TVDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/TVCountTries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/info_count_tries" />

    <ScrollView
        android:id="@+id/SVSolutions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                android:text="@string/info_attempts_solution" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/layout_solutions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/BtnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:backgroundTint="#3849AB"
        android:textColor="@color/white" />

</LinearLayout>