<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <EditText
        android:id="@+id/et_question"
        android:layout_width="match_parent"
        android:gravity="start"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/info_text_task" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_answer_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btn_add_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3849AB"
            android:textColor="@color/white"
            android:text="@string/add_variant_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/btn_delete_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3849AB"
            android:textColor="@color/white"
            android:text="@string/remove_task_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>